--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Pascal Hertleif <killercup@gmail.com> (http://pascalhertleif.de/)",
   "license": "MIT",
   "dependencies": {
-    "nan": "^2.3.3"
+    "nan": "^2.3.3",
+    "node-gyp": "^3.3.1"
   },
   "devDependencies": {
     "ava": "^0.14.0"
