--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ before_install:
 - sudo apt-get install -y libarchive-dev curl
 - mkdir etc
 - curl http://divvun.no/static_files/zhfsts/se.zhfst > etc/se.zhfst
+notifications:
+  email:
+    on_success: never
