Allow Concurrent* Spell Checking
* and by "concurrent" I mean "it will not block node's event loop but it
will use locks behind your back and thus be pretty slow still".

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "ava"
   },
   "author": "Pascal Hertleif <killercup@gmail.com> (http://pascalhertleif.de/)",
+  "repository": "https://github.com/killercup/hfst-ospell-js.git",
   "license": "MIT",
   "dependencies": {
     "nan": "^2.3.3",
