--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "preinstall": "git submodule -q update --init --recursive; node-gyp configure build",
+    "preinstall": "git submodule -q update --init --recursive",
+    "postinstall": "node-gyp configure build",
     "test": "ava"
   },
   "author": "Pascal Hertleif <killercup@gmail.com> (http://pascalhertleif.de/)",
